src/css/variables.css
/**
 * Variables naming rule: --{selector aka component aka namespace}-{css property}-{pseudo class or media query name} eg. --p-background-color-hover 
 * NOTE: Within the component don't use any name spacing eg. component header don't use --header-color just use --color the namespace can be added by the Shadow as an html attribute
 * - if a component holds other components or nodes you can declare or remap classes eg. :host > h1 {--color: var(--h1-color, white);}
 * - if a component holds other components you should share the attribute namespace with its children
 */
 html {
  --content-width-mobile: 100%;
  --content-width-not-web-component-mobile: 95%;
  --content-width-not-web-component: 60%;
  --content-width: 95%;
  --figcaption-padding-mobile: 1.5rem 2.5% 0;
  --figcaption-padding: 1.5rem 0 0;
  --flex-grow: 1;
  --h5-font-size: 1.125rem;
  --h5-font-weight: 700;
  --h5-line-height: 1.75rem;
  --h5-margin: 0;
  --header-a-align-self: baseline;
  --header-a-color-hover: var(--color-secondary);
  --header-a-color: var(--color);
  --header-a-font-size: var(--h4-font-size);
  --header-a-line-height: 2rem;
  --header-a-padding: 0 max(4.5625rem, 3vw) 0 0;
  --header-a-text-decoration-hover: none;
  --header-a-text-decoration: none;
  --header-a-text-transform: none;
  --header-a-white-space: nowrap;
  --header-align-items: end;
  --header-border-bottom: 1px solid var(--m-gray-300);
  --header-content-spacing: 0;
  --header-flex-wrap: wrap;
  --header-header-position: relative;
  --header-height: auto;
  --header-justify-content: flex-start;
  --header-order: 0;
  --header-padding:1.5rem 0 0;
  --header-position: static;
  --home-spacer-height-mobile: 0;
  --home-spacer-height: 3.875rem;
  --margin-first-child-mobile: 0;
  --margin-last-child: 0;
  --margin-mobile: 0;
  --margin: 0 1.94rem 0 0;
  --navigation-a-link-content-spacing: 0;
  --navigation-a-link-font-size: var(--header-a-font-size);
  --navigation-a-link-font-weight: bold;
  --navigation-color-hover: var(--color-secondary);
  --navigation-color-open: var(--color);
  --navigation-flex-wrap: wrap;
  --navigation-li-padding: 0 0 1.5rem;
  --navigation-margin: 0 max(0.6vw, 0.75rem);
  --navigation-padding: 0;
  --navigation-white-space: break-spaces;
  --navigation-word-break: break-word;
  --padding: 0;
  --picture-margin: 0 auto;  /* Warning! Keep horizontal margin at auto, otherwise the content width + margin may overflow into the scroll bar */
  --picture-margin: 0;
  --picture-padding: 0;
  --picture-text-wrapper-any-1-width: 65%;
  --picture-text-wrapper-h1-margin: var(--teaser-h1-margin);
  --picture-text-wrapper-margin-first-child-mobile: 0;
  --picture-text-wrapper-margin-last-child: 0;
  --picture-text-wrapper-margin-mobile: 0;
  --picture-text-wrapper-margin: 0 1.94rem 0 0;
  --picture-text-wrapper-padding-last-child-mobile: var(--figcaption-padding-mobile);
  --picture-text-wrapper-padding: 0;
  --picture-width-mobile: var(--content-width-mobile);
  --picture-width: var(--content-width);
  --q-font-size-mobile: 1.333rem;
  --q-font-size: 1.272rem;
  --q-margin: 0 auto 0.227rem;
  --teaser-btn-border-color-hover: var(--m-blue-800);
  --teaser-btn-border-color: var(--m-blue-600);
  --teaser-btn-button-color-hover: var(--m-blue-700);
  --teaser-btn-button-color: var(--m-blue-500);
  --teaser-btn-margin-mobile: 0 0.5rem var(--content-spacing);
  --teaser-btn-margin: 0 0 var(--content-spacing);
  --teaser-content-spacing: 0;
  --teaser-content-width: 100%;
  --teaser-h1-margin: 0 0 1.25rem;
  --teaser-picture-width-mobile: 100%;
  --teaser-picture-width: 100%;
  --teaser-wrapper-margin-first-child-mobile: 0;
  --teaser-wrapper-margin-last-child: 0;
  --teaser-wrapper-margin-mobile: 0;
  --teaser-wrapper-margin: 0 1.94rem 0 0;
  --teaser-wrapper-padding: 0;
  --title-rotation: -12deg;
  --video-margin: 0 auto;
}

